src/assets/style.css
/* Add Tufte CSS */
@import "tufte-css/tufte.min.css";

/* Add Prism Themes */
@import "prismjs/themes/prism-solarizedlight.min.css" screen;
@import "prismjs/themes/prism-tomorrow.min.css" screen and
  (prefers-color-scheme: dark);

/* Fix image scaling in tufte-css */
/* See: https://github.com/edwardtufte/tufte-css/pull/192 */
img {
  height: auto;
}

/* Disable underline in code block in tufte-css */
/* See: https://github.com/edwardtufte/tufte-css/pull/187 */
code > a {
  /* TODO: use text-decoration when next version of tufte-css is released */
  background: unset !important;
}

/* Display for marginnote bibliographies */
label.margin-toggle.inline-cite {
  display: inline;
}
span.inline-bib {
  display: inline-block;
}
span.inline-bib > span.inline-bib-entry {
  display: list-item;
  list-style: none;
}

/* Style for page banner */
article > header {
  display: flex;
  align-items: center;
  justify-content: center;
}
article > header > p.banner-title {
  font-style: italic;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  display: block;
  line-height: 1;
}

/* Style for heading anchors */
h2 > a.heading-anchor > span.heading-anchor-icon > svg {
  margin-left: 0.6rem;
  height: 1.6rem;
  width: auto;
}
h3 > a.heading-anchor > span.heading-anchor-icon > svg {
  margin-left: 0.45rem;
  height: 1.2rem;
  width: auto;
}
a.heading-anchor {
  /* TODO: use text-decoration when next version of tufte-css is released */
  background: unset;
}
a.heading-anchor:hover {
  /* TODO: use text-decoration when next version of tufte-css is released */
  background:
    -webkit-linear-gradient(#fffff8, #fffff8),
    -webkit-linear-gradient(#fffff8, #fffff8),
    -webkit-linear-gradient(currentColor, currentColor);
  background:
    linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8),
    linear-gradient(currentColor, currentColor);
  -webkit-background-size:
    0.05em 1px,
    0.05em 1px,
    1px 1px;
  -moz-background-size:
    0.05em 1px,
    0.05em 1px,
    1px 1px;
  background-size:
    0.05em 1px,
    0.05em 1px,
    1px 1px;
  background-repeat: no-repeat, no-repeat, repeat-x;
  text-shadow:
    0.03em 0 #fffff8,
    -0.03em 0 #fffff8,
    0 0.03em #fffff8,
    0 -0.03em #fffff8,
    0.06em 0 #fffff8,
    -0.06em 0 #fffff8,
    0.09em 0 #fffff8,
    -0.09em 0 #fffff8,
    0.12em 0 #fffff8,
    -0.12em 0 #fffff8,
    0.15em 0 #fffff8,
    -0.15em 0 #fffff8;
  background-position:
    0% 93%,
    100% 93%,
    0% 93%;
}
a.heading-anchor > span.heading-anchor-icon > svg {
  display: none;
}
a.heading-anchor:hover > span.heading-anchor-icon > svg {
  display: inline;
}

